<resources>
    <string name="app_name">ShoeStore</string>
    <string name="app_logo">App Logo</string>
    <string name="login">Login</string>
    <string name="email">EMAIL ADDRESS</string>
    <string name="pass">PASSWORD</string>
    <string name="sign_in">SIGN IN</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="app_banner">app banner</string>
    <string name="welcome_to_shoepify">Welcome to Shoepify</string>
    <string name="intro_text">Hey, nice to see you here. Welcome\' enjoy a wide variety of shoes you can buy</string>
    <string name="let_s_go">LET\'S GO</string>
    <string name="find_a_shoe_you_like">Create a list of your favorite shoes</string>
    <string name="instruction_text">There is a variety of items you can find in our store. Add what you like. Do not forget to give us your feedback before you go</string>
    <string name="let_s_do_some_shopping">LET\'S DO SOME SHOPPING</string>
    <string name="add_shoe">Add Shoe</string>
    <string name="shoe_list_text">Hey there, your shoes will appear here. Add a shoe by clicking the button at the bottom</string>
    <string name="logout">LOGOUT</string>
    <string name="detail_txt">Add a new shoe to your list.</string>
    <string name="shoe_name">NAME</string>
    <string name="company">COMPANY</string>
    <string name="size">SIZE</string>
    <string name="description">DESCRIPTION</string>
    <string name="save_shoe">SAVE SHOE</string>
    <string name="cancel">CANCEL</string>
</resources>
